2012-07-28  Carl Hetherington  <cth@carlh.net>

	* Fix makedcp parsing of -v option.

2012-07-28  Carl Hetherington  <cth@carlh.net>

	* Version 0.36 released.

2012-07-28  Carl Hetherington  <cth@carlh.net>

	* Install / version tweaks.

2012-07-28  Carl Hetherington  <cth@carlh.net>

	* Version 0.35 released.

2012-07-27  Carl Hetherington  <cth@carlh.net>

	* Version 0.31 released.

2012-07-27  Carl Hetherington  <cth@carlh.net>

	* Speed up thumbnail display.

	* Various improvements to Windows port.

	* Fix TMS transfer with large files.

	* Clean up audio handling code somewhat.

	* Re-sample audio to 48kHz or 96kHz if necessary.

	* Remove player functionality from DVD-o-matic.

2012-07-22  Carl Hetherington  <cth@carlh.net>

	* Port to Windows.

	* Use MD5 digest to decide on the directory to put J2C files
	in, rather than the path of the content.

	* Allow building with current FFmpeg git.

	* Fix problems when creating cut videos in that the audio is too
	short; pad it with silence.

2012-07-21  Carl Hetherington  <cth@carlh.net>

	* Version 0.29 released.

2012-07-21  Carl Hetherington  <cth@carlh.net>

	* Tidy widgets and menus when there is no film loaded.

	* Option to build with Ubuntu 12.04's FFmpeg libraries.

	* Add dialogue box to choose DVD title when ripping.

	* Always do an examine run for new content.

2012-07-18  Carl Hetherington  <cth@carlh.net>

	* Version 0.26 released

2012-07-15  Carl Hetherington  <cth@carlh.net>

	* Remove code to use `standard' format DCP long names,
	as in the wild their use seems to be decreasing, and it
	makes the GUI simpler.

	* Fix some bugs with sending to servomatic introduced
	in the adjustments to padding.

	* Write some status text when an unknown-progress
	job is running.

	* Use new libdcp rather than OpenDCP to generate MXFs
	and write DCP XML.

2012-07-14  Carl Hetherington  <cth@carlh.net>

	* Version 0.25 released.

2012-07-14  Carl Hetherington  <cth@carlh.net>

	* Various GUI cleanups.
